Infrastructure: Use toList in the distributed data surface gate
Collectors.toList() is rejected by ArchitectureTest.testNoCollectorsToList.